# HTTP-server

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql  main.c
src/: main.c  request.c  request.h  server.c  server.h  todos.c  todos.h
src/db/: email_change_requests.c  email_change_requests.h  sessions.c  sessions.h  todos.c  todos.h  users.c  users.h  verifications.c  verifications.h
src/db/util/: generate_token.c  generate_token.h  query_result.h
src/http/: request.c  request.h  response.c  response.h  route.c  route.h  router.h  server.c  server.h
src/http/routing/: handlers.c  handlers.h  helpers.c  helpers.h  route.h
src/http/util/: db_cleanup.c  db_cleanup.h  task.h
src/http/www/: about.html  authentication.html  err_styles.css  index.html  reset_password_page.html  user_page.html
src/http/www/errors/: 400.html  401.html  403.html  404.html  405.html  415.html  500.html  503.html
src/http/www/mails/: email_verification.html  password_reset.html
src/http/www/static/: auth_script.js  auth_styles.css  styles.css  todo_script.js  todo_styles.css  todoscript.js  todostyles.css  user_script.js
src/http/www/static/scripts/: auth_script.js  base.js  reset_password_script.js  todo_script.js  user_script.js
src/http/www/static/styles/: about_styles.css  auth_styles.css  base.css  err_styles.css  form-base.css  form_base.css  reset_password_styles.css  todo_styles.css  user_styles.css  ver_styles.css
src/http/www/templates/: todos.html  todos_page.html  user_page.html  verification_page.html
src/middlewares/: session_middleware.c  session_middleware.h
src/todos/: todos.c  todos.h
